# codex_pets

./: LICENSE.md  README.md  catalog.json  pyproject.toml
docs/superpowers/plans/: 2026-05-11-shinsekai-pet-host-phase1.md
docs/superpowers/specs/: 2026-05-11-shinsekai-pet-host-design.md
pets/anaxa-sage/: dialogue.yaml  persona.md  pet.json
pets/mj-legends/: dialogue.yaml  persona.md  pet.json
previews/anaxa-sage/: review.json  validation.json
previews/mj-legends/: review.json  validation.json
scripts/: install_pet.sh  validate_catalog.py
shinsekai_pet_host/: __init__.py  backends.py  cli.py  codex_cli.py  desktop_preview.py  host_controller.py  openai_compatible.py  persona.py  petpack.py  qt_doctor.py  runtime.py
tests/: test_backends.py  test_cli.py  test_desktop_preview.py  test_persona.py  test_petpack.py  test_qt_doctor.py  test_runtime.py
