[project]
name = "codex-pets"
version = "0.1.0"
description = "Codex pet assets and a Shinsekai-style Pet Host prototype."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
desktop = [
  "PySide6>=6.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["shinsekai_pet_host"]
